--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 App Component
-<test-directive></test-directive>
+<app-ngjs-content></app-ngjs-content>
 <router-outlet></router-outlet>
+<test-directive></test-directive>
+<test-directive2></test-directive2>
